fixed, scroll overflow, index bg color, border color, favicon

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
+  background-color: rgb(245, 241, 241);
   margin: 0;
+  overflow-x: hidden;
   font-family: 'Open Sans', sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
