--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -4,7 +4,8 @@
         width: 100%;
         height: 70px;
         padding: 8px 32px;
-        margin: 0;
+        margin: 0px;
         display: flex;
         align-items: center;
+        
 }
