--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,6 +2,8 @@ a {
    text-decoration: none;  
 }
 
+
+
 a:link {
     color: whitesmoke
 }
@@ -21,5 +23,6 @@ a:visited {
     position:fixed;
     display: flex;
     align-items: center;
+    justify-content: center;
     
 }
